# EXPERIMENTAL_ROBOTICS_LABORATORY

./: README.md
ExpLab-FirstAssignment-main/: README.md
ExpLab-FirstAssignment-main/robot_urdf-ros2/launch/: gazebo_aruco.launch.py
b_FinalAssignment-main/: README.md
b_FinalAssignment-main/plansys2_assignment_pkg/: CMakeLists.txt  package.xml
b_FinalAssignment-main/plansys2_assignment_pkg/launch/: assignment2.launch.py  plansys2_assignment_launch.py  problem_command.txt
b_FinalAssignment-main/plansys2_assignment_pkg/pddl/: ass_example.pddl
b_FinalAssignment-main/plansys2_assignment_pkg/plansys2_assignment_pkg/: bug0.py  camera_check_node.py  go_to_action_node.py  go_to_point_srv.py  logic  marker_searcher_action.py  motor_motion_node.py  wall_follow_srv.py
b_FinalAssignment-main/ros2_aruco/ros2_aruco/: aruco_node.py
b_FinalAssignment-main/rosbot_description/launch/: rosbot_sim.launch.py  rosbot_spawn.launch.py
b_FinalAssignment-main/rosbot_description/models/rosbot_base/: body.urdf.xacro
b_FinalAssignment-main/rosbot_description/models/rosbot_base/components/: orbbec_astra.gazebo.xacro  rplidar_a2.gazebo.xacro
b_FinalAssignment-main/rosbot_description/worlds/: model.config
